[package]
name = "run_notify"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.37"
clap_derive = "4.5.32"
directories = "6.0.0"
system_shutdown = "4.0.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
gethostname = "1.0.2"