[package]
name = "run_notify"
version = "0.1.1"
edition = "2024"
authors = ["Cameron VanderTuig"]
license-file = "LICENSE"
description = "Runs another command, sending a notification to pushover when it completes"
repository = "https://github.com/IRSMsoso/run-notify"
readme = "README.md"

[dependencies]
clap = "4.5.37"
clap_derive = "4.5.32"
directories = "6.0.0"
system_shutdown = "4.0.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
gethostname = "1.0.2"